[package]
name = "db-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
mdbx = ["dep:reth-db", "dep:reth-db-api", "dep:reth-libmdbx", "dep:reth-primitives-traits", "dep:eyre"]
fdb = ["dep:foundationdb", "dep:tokio"]
block-stm = ["dep:block-stm-executor"]

[dependencies]
revm = { version = "33", features = ["std"] }
alloy-primitives = { version = "1", features = ["k256"] }
alloy-consensus = "0.14"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"

# MDBX database support (optional)
reth-db = { path = "../reth/crates/storage/db", optional = true }
reth-db-api = { path = "../reth/crates/storage/db-api", optional = true }
reth-libmdbx = { path = "../reth/crates/storage/libmdbx-rs", optional = true }
reth-primitives-traits = { path = "../reth/crates/primitives-traits", optional = true }
eyre = { version = "0.6", optional = true }
tempfile = "3"

# FoundationDB support (optional)
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_4"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }

# Block-STM parallel executor (optional)
block-stm-executor = { path = "block-stm-executor", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eth_transfer"
harness = false
